--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,28 @@
     <link rel="alternate" type="application/feed+json" href="/feed.json" />
     <link rel="alternate" type="application/atom+xml" href="/atom.xml" />
     <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+
+    <!-- clarity -->
+    <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "ftpnw924g7");
+  </script>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M2PVXMBE67"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-M2PVXMBE67');
+</script>
+
+    
+
     %sveltekit.head%
   </head>
   <body itemscope itemtype="https://schema.org/WebPage">
