--- a/src/app.html
+++ b/src/app.html
@@ -28,7 +28,9 @@
   gtag('config', 'G-M2PVXMBE67');
 </script>
 
-    
+    <!-- Google Adsense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7827487944601896"
+     crossorigin="anonymous"></script>
 
     %sveltekit.head%
   </head>
