--- a/src/app.html
+++ b/src/app.html
@@ -32,6 +32,10 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7827487944601896"
      crossorigin="anonymous"></script>
 
+
+      <!-- Keywords Meta Tag -->
+  <meta name="keywords" content="Valiant Lynx, multi-disciplinary engineer, technology, AI, Blockchain, Web Development, Product Design, virtual world, SEO" />
+
     %sveltekit.head%
   </head>
   <body itemscope itemtype="https://schema.org/WebPage">
