--- a/src/app.html
+++ b/src/app.html
@@ -11,30 +11,42 @@
 
     <!-- clarity -->
     <script type="text/javascript">
-      (function(c,l,a,r,i,t,y){
-          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-      })(window, document, "clarity", "script", "ftpnw924g7");
-  </script>
+      ;(function (c, l, a, r, i, t, y) {
+        c[a] =
+          c[a] ||
+          function () {
+            ;(c[a].q = c[a].q || []).push(arguments)
+          }
+        t = l.createElement(r)
+        t.async = 1
+        t.src = 'https://www.clarity.ms/tag/' + i
+        y = l.getElementsByTagName(r)[0]
+        y.parentNode.insertBefore(t, y)
+      })(window, document, 'clarity', 'script', 'ftpnw924g7')
+    </script>
 
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-M2PVXMBE67"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M2PVXMBE67"></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
 
-  gtag('config', 'G-M2PVXMBE67');
-</script>
+      gtag('config', 'G-M2PVXMBE67')
+    </script>
 
     <!-- Google Adsense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7827487944601896"
-     crossorigin="anonymous"></script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7827487944601896"
+      crossorigin="anonymous"></script>
 
-
-      <!-- Keywords Meta Tag -->
-  <meta name="keywords" content="Valiant Lynx, multi-disciplinary engineer, technology, AI, Blockchain, Web Development, Product Design, virtual world, SEO" />
+    <!-- Keywords Meta Tag -->
+    <meta
+      name="keywords"
+      content="Valiant Lynx, multi-disciplinary engineer, technology, AI, Blockchain, Web Development, Product Design, virtual world, SEO" />
 
     %sveltekit.head%
   </head>
